--- a/.vsts.template.windows.yml
+++ b/.vsts.template.windows.yml
@@ -15,12 +15,12 @@ steps:
   clean: true
 
 # Build agent layout
-- script: dev.cmd layout Release
+- bash: ./dev.sh layout Release
   workingDirectory: src
   displayName: Build & Layout Release
 
 # Run test
-- script: dev.cmd test
+- bash: ./dev.sh test
   workingDirectory: src
   displayName: Test
 
