--- a/.vsts.template.windows.yml
+++ b/.vsts.template.windows.yml
@@ -16,9 +16,9 @@ steps:
 
 # Build agent layout
 - script: |
-    Write-Host "##vso[task.prependpath]C:\Program Files\Git\mingw64\bin"
-    Write-Host "##vso[task.prependpath]C:\Program Files\Git\usr\bin"
-    Write-Host "##vso[task.prependpath]C:\Program Files\Git\bin"
+    echo "##vso[task.prependpath]C:\Program Files\Git\mingw64\bin"
+    echo "##vso[task.prependpath]C:\Program Files\Git\usr\bin"
+    echo "##vso[task.prependpath]C:\Program Files\Git\bin"
     dev.cmd layout Release
   workingDirectory: src
   displayName: Build & Layout Release
@@ -26,9 +26,9 @@ steps:
 
 # Run test
 - script: |
-    Write-Host "##vso[task.prependpath]C:\Program Files\Git\mingw64\bin"
-    Write-Host "##vso[task.prependpath]C:\Program Files\Git\usr\bin"
-    Write-Host "##vso[task.prependpath]C:\Program Files\Git\bin"
+    echo "##vso[task.prependpath]C:\Program Files\Git\mingw64\bin"
+    echo "##vso[task.prependpath]C:\Program Files\Git\usr\bin"
+    echo "##vso[task.prependpath]C:\Program Files\Git\bin"
     dev.cmd test
   workingDirectory: src
   displayName: Test
