--- a/.vsts.ci.yml
+++ b/.vsts.ci.yml
@@ -39,6 +39,7 @@ jobs:
 
   - task: PublishCodeCoverageResults@1
     inputs:
+      codeCoverageTool: 'cobertura'
       summaryFileLocation: _reports/**/Cobertura.xml
       pathToSources: src
 
