--- a/src/Test/Test.csproj
+++ b/src/Test/Test.csproj
@@ -21,4 +21,10 @@
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="L1\Tasks\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
