Added initial rollrelease script to perform per-ring steps
Also, converted mkrelease to use octokit
Also, fixed strings in mkrelease

--- a/release/package.json
+++ b/release/package.json
@@ -10,8 +10,10 @@
   "author": "Microsoft Corporation",
   "license": "MIT",
   "dependencies": {
+    "@octokit/rest": "^16.43.1",
+    "install": "^0.13.0",
     "natural-sort": "^1.0.0",
     "node-getopt": "^0.3.2",
-    "typed-rest-client": "^1.7.1"
+    "npm": "^6.13.7",
   }
 }
